# cserve

./: .gitignore  CMakeLists.txt
pages/: index.html
src/db/: CMakeLists.txt
tests/: CMakeLists.txt  main.c
